@@ -19,6 +19,7 @@ Revision 0.2.7, released XX-08-2019
   RFC6402, RFC7191, and RFC8226 when the module is imported
 - Added RFC6211 providing CMS Algorithm Identifier Protection Attribute
 - Added RFC8449 providing Certificate Extension for Hash Of Root Key
+- Updated RFC2459 and RFC5280 for TODO in the certificate extension map
 
 Revision 0.2.6, released 31-07-2019
 -----------------------------------
